# YCluster

./: .aider-rules.md  .aider.conf.yml  .dockerignore  .gitignore  .syncignore  .watchignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  Makefile  OPERATIONS.md  README.md  SCORE.md  TODO.md  ansible.cfg  dev-sync.sh  docker-compose.dev.yaml  docker-compose.yaml  inventory_dev_etcd.yml  pyproject.toml  run-tests.sh
config/: nginx.conf  squid.conf
contrib/: _cluster_config.py  comino-sensors.py  go-vllm-m27  headtail  install-nvidia.sh  nv-bench.sh  test-inference.py  whisperx-test.py
dev/: chrony.conf  dhcp-script.sh  dnsmasq-watch.sh  dnsmasq.conf.template  docker-compose.yaml  generate-dhcp-hosts.sh  grub.cfg  nginx.conf
dnsmasq/: Dockerfile  dhcp-script.sh  startup.sh
docs/: ADMIN.md  DEVELOPMENT.md  OPEN_WEBUI.md  OPERATIONS.md  inference-proxy.md  llm-performance.md  local-ai-proxy.md
ext/: bench-chat.py  build-exo-dashboard.sh  deploy-exo.sh  exo-place.sh  run-exo.sh
httpd/: Dockerfile  app.py  start.sh
local-ai-proxy/: .gitignore  Makefile  README.md  TODO.md  acl.go  acl_test.go  cli.go  config.example.yaml  config.go  config_test.go  disabled.go  disabled_test.go  errors.go  errors_test.go  etcdclient.go  etcdclient_test.go  fanout_test.go  go.mod  go.sum  handler.go  handler_test.go  health.go  health_test.go  healthz_test.go  load.go  main.go  metrics.go  middleware.go  middleware_test.go  router.go  router_test.go  servable_test.go  source.go  system_test.go  trusted.go  trusted_test.go
proxy/: Makefile  TODO.md  go.mod  handler.go  (+3 more)
(+402 files in other folders)
