[project]
name = "ycluster-dev"
version = "0.1.0"
description = "YCluster development environment"
requires-python = ">=3.11"
dependencies = [
    # Ansible
    "ansible>=9.0.0",

    # For etcd inventory plugin
    "etcd3>=0.12.0",
    "protobuf>=3.20.0,<4.0.0",  # etcd3 requires older protobuf

    # ycluster CLI dependencies
    "flask>=2.0.0",
    "requests>=2.25.0",
    "dnspython>=2.1.0",
    "cryptography>=3.4.0",
    "jinja2>=3.0.0",
    "scapy>=2.4.0",
    "ntplib>=0.3.0",
    "netifaces>=0.11.0",
    "pyyaml>=5.4.0",
]

[tool.uv]
dev-dependencies = [
    "ansible-lint>=6.0.0",
]
